# setup

./: astro.config.mjs  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/routes/: JSON.rs  db_query.rs  hello_world.rs  mod.rs
src/components/: Counter.tsx
src/components/HeaderFolder/: Headbar.tsx
src/components/JobsFolder/: Jobs.tsx
src/components/ProfileFolder/: Profile.tsx
src/components/TrendingFolder/: Trending.tsx
src/components/fetch/: fetchtest.tsx
src/pages/: index.astro  jobspage.astro  profilepage.astro  trendingpage.astro
